[package]
name = "pallet-foresta-collectives"
version = "4.0.0-dev"
description = "The Foresta Collectives Pallet"
authors = ["Foresta"]
homepage = ""
edition = "2021"
license = "MIT"
publish = false
repository = ""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true}
frame-support = { workspace = true}
frame-system = { workspace = true}

[dev-dependencies]
sp-core = { workspace = true}
sp-io = { workspace = true}
sp-runtime = { workspace = true}

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]